...
        portfolio.totalAnnualDividendIncome / 12;
    double totalMonthlyIncome =
        wealthState.totalPassiveIncome + monthlyDividendIncome;

    return Scaffold(
      appBar: AppBar(
        title: const Text("WealthTriangle",
            style: TextStyle(fontWeight: FontWeight.bold)),
        actions: [
          IconButton(
            icon: Icon(
                themeService.isDarkMode ? Icons.light_mode : Icons.dark_mode),
            onPressed: () {
...
